AVRO-1065 Remove validation check that erroneously flags records with no fields as invalid. Expect that this will come in the next avro release.